Externalize system prompt to a separate file and update search request handling